# gear-academy

./: .metahash  Cargo.toml  meta.txt
src/: lib.rs
tam-io/: Cargo.toml
tam-io/src/: lib.rs
tmg/: .binpath  .metahash  Cargo.toml  README.md  build.rs  meta.txt  tamagochi_1.meta.txt
tmg/src/: lib.rs  messages.rs
tmg/state/: Cargo.toml
tmg/state/src/: lib.rs
tmg/tam-io/: Cargo.toml
tmg/tam-io/src/: lib.rs
tmg/tests/: tamagochi_tests.rs
