[package]
name = "tamagochi_1"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet"}
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}
tam-io = { path = "tam-io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}

