[package]
name = "state"
version = "0.1.0"
edition = "2018"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68", features = ["codegen"] }

parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
tam-io = { path = "../tam-io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68", features = ["metawasm"] }


[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = []
default = ["binary-vendor"]